--- a/templates/about.html
+++ b/templates/about.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT | django3app</title>
+    <title>ABOUT | Django3App</title>
 </head>
 <body>
-    <h1>About</h1>
-    <p>About ini dibuat menggunakan django</p>
+    <h1>ABOUT</h1>
 
     <ul>
         <li><a href="/">home</a></li>
+        <li><a href="/blog">blog</a></li>
+        <li><a href="/about">about</a></li>
     </ul>
 </body>
 </html>
