--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,18 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT | Django3App</title>
+    <title>{{ judul }} | Django3App</title>
 </head>
 <body>
-    <h1>ABOUT</h1>
-
+    <img style="width: 100%;" src="{% static banner %}" alt="">
+    <h1>{{ judul }}</h1>
+    <h2>Kontributor: {{ kontributor }}</h2>
     <ul>
-        <li><a href="/">home</a></li>
-        <li><a href="/blog">blog</a></li>
-        <li><a href="/about">about</a></li>
+        {% for link, name in nav %}
+        <li><a href="{{ link }}">{{ name }}</a></li>
+        {% endfor %}
     </ul>
+
 </body>
 </html>
