--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ judul }} | Django3App</title>
+    <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static app_css %}">
 </head>
 <body>
-    <img style="width: 100%;" src="{% static banner %}" alt="">
+    <img id="banner" src="{% static banner %}" alt="">
+
+    <nav>
+        <ul>
+            {% for link,name in nav %}
+            <li><a href="{{ link }}">{{ name }}</a></li>
+
+            {% endfor %}
+
+        </ul>
+    </nav>
+
     <h1>{{ judul }}</h1>
     <h2>Kontributor: {{ kontributor }}</h2>
 
-    <ul>
-        {% for link,name in nav %}
-        <li><a href="{{ link }}">{{ name }}</a></li>
-
-        {% endfor %}
-
-    </ul>
 </body>
 </html>
