--- a/templates/index.html
+++ b/templates/index.html
@@ -1,74 +1,10 @@
-{% load static %}
+{% extends "layout/layout.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ judul }} | Django3App</title>
-    <link rel="stylesheet" type="text/css" href="{% static "vendor/bootstrap/bootstrap.css" %}">
-    <!-- <link rel="stylesheet" type="text/css" href="{% static app_css %}"> -->
+{% block content %}
 
-</head>
-<body>
-
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img style="height: 30px;" src="{% static "img/logo.png" %}" alt="">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/blog">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                  </li>
-                  
-                </ul>
-              </div>
-            </div>
-        </nav>
-
-        <div class="container">
-            <h1>{{ judul }}</h1>
-            <h2>Kontributor : {{ kontributor }}</h2>
-        </div>
-
-
-        
-
-
-
-        <!-- <img id="banner" src="{% static banner %}" alt="">
-
-        <nav>
-            <ul>
-                {% for link,name in nav %}
-                <li><a href="{{ link }}">{{ name }}</a></li>
-
-                {% endfor %}
-
-            </ul>
-        </nav>
-
+    <div class="container">
         <h1>{{ judul }}</h1>
-        <h2>Kontributor: {{ kontributor }}</h2> -->
+        <h2>Kontributor : {{ kontributor }}</h2>
+    </div>
 
-    <script src="{% static "vendor/jquery/jquery.js" %}" type="text/javascript"></script>
-    
-    <script src="{% static "vendor/popper/popper.js" %}" type="text/javascript"></script>
-    
-    <script src="{% static "vendor/bootstrap/bootstrap.js" %}" type="text/javascript"></script>
-
-</body>
-</html>
+{% endblock content %}
